--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@solana/actions": "^1.6.5",
+    "@solana/web3.js": "^1.95.3",
     "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
