--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/groq": "^0.0.16",
     "@langchain/openai": "^0.2.6",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -30,6 +31,12 @@
     "@solana/actions": "^1.6.5",
     "@solana/web3.js": "^1.95.3",
     "@tanstack/react-query": "^5.51.15",
+    "@toruslabs/openlogin-ed25519": "^8.1.0",
+    "@web3auth/base": "^9.0.2",
+    "@web3auth/default-evm-adapter": "^9.1.0",
+    "@web3auth/default-solana-adapter": "^9.1.0",
+    "@web3auth/modal": "^9.1.0",
+    "@web3auth/solana-provider": "^9.0.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +44,7 @@
     "cookies-next": "^4.2.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.6",
+    "ethers": "^6.13.2",
     "intro.js-react": "^1.0.0",
     "langchain": "^0.2.16",
     "lodash": "^4.17.21",
@@ -51,7 +59,9 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "viem": "^2.19.1",
+    "web3": "^4.11.1"
   },
   "devDependencies": {
     "@types/node": "^20",
