--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-lottie": "^1.2.4",
     "react-select": "^5.8.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
