--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtube-storyteller-ai-build",
+  "name": "fable-3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,24 +12,42 @@
     "@code-wallet/elements": "^2.0.4",
     "@dynamic-labs/sdk-react-core": "^2.0.0-alpha.21",
     "@dynamic-labs/solana": "^2.0.0-alpha.21",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/editorjs": "^2.30.7",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.1",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^2.0.2",
+    "@editorjs/paragraph": "^2.11.6",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
+    "@editorjs/simple-image": "^1.6.0",
+    "@editorjs/table": "^2.4.3",
     "@gptscript-ai/gptscript": "^0.9.1",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.9.1",
     "@langchain/community": "^0.2.27",
     "@langchain/groq": "^0.0.16",
     "@langchain/openai": "^0.2.6",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@solana/actions": "^1.6.5",
     "@solana/web3.js": "^1.95.3",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.51.15",
     "@toruslabs/openlogin-ed25519": "^8.1.0",
     "@web3auth/base": "^9.0.2",
@@ -43,6 +61,8 @@
     "cmdk": "^1.0.0",
     "cookies-next": "^4.2.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.3",
+    "editorjs-hyperlink": "^1.0.6",
     "embla-carousel-react": "^8.1.6",
     "ethers": "^6.13.2",
     "intro.js-react": "^1.0.0",
@@ -51,9 +71,10 @@
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "novel": "^0.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.2",
     "react-lottie": "^1.2.4",
     "react-select": "^5.8.0",
     "sharp": "^0.33.4",
@@ -62,7 +83,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "viem": "^2.19.1",
-    "web3": "^4.11.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
