--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@gptscript-ai/gptscript": "^0.9.1",
     "@hookform/resolvers": "^3.9.1",
     "@langchain/community": "^0.2.27",
+    "@langchain/core": "^0.3.40",
     "@langchain/groq": "^0.0.16",
     "@langchain/openai": "^0.2.6",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -66,7 +67,6 @@
     "embla-carousel-react": "^8.1.6",
     "ethers": "^6.13.2",
     "intro.js-react": "^1.0.0",
-    "langchain": "^0.2.16",
     "lodash": "^4.17.21",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
