--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
-    "react": "^19.1.0",
-    "react-dom": "^19.0.0",
+"react": "19.1.0",
+  "react-dom": "19.1.0",
     "react-effect-typewriter": "^1.0.2",
     "react-multi-carousel": "^2.8.6",
     "sonner": "^2.0.3",
