--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@code-wallet/elements": "^2.0.4",
-    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
@@ -24,6 +25,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lodash": "^4.17.21",
@@ -31,8 +33,8 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
-"react": "19.1.0",
-  "react-dom": "19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-effect-typewriter": "^1.0.2",
     "react-multi-carousel": "^2.8.6",
     "sonner": "^2.0.3",
